sanger/sites/anderson-gut/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anderson-gut
spec:
  selector:
    matchLabels:
      app: anderson-gut
  replicas: 1
  template:
    metadata: 
      name: anderson-gut
      labels:
        app: anderson-gut
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: anderson-gut-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: anderson-gut
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata-normalized_pca-bbknn-umap-clustered-cellxgene.h5ad", "-t", "normalized pca bbknn clustered", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "16Gi"
            cpu: 1
---
