sanger/sites/anderson-gut/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anderson-gut
  labels:
    app: anderson-gut
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: anderson-gut
---
