sanger/sites/anderson-gut/ingress.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: anderson-gut
spec:
  virtualhost:
    fqdn: anderson-gut.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: anderson-gut
          prefixRewrite: "/" 
          port: 80
    - match: /static
      services:
        - name: anderson-gut
          port: 80
---
